--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,10 +17,10 @@
                 Fitness Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
+                <a href="" class="dropdown-item">Stringers</a>
                 <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <a href="" class="dropdown-item">Shorts</a>
+                <a href="" class="dropdown-item">All Fitness Clothing</a>
             </div>
         </li>
 
@@ -29,9 +29,10 @@
                 Fitness Equipment
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
+                <a href="" class="dropdown-item">Weights</a>
+                <a href="" class="dropdown-item">Cardio</a>
+                <a href="" class="dropdown-item">Training Plans</a>
+                <a href="" class="dropdown-item">All Fitness Equipment</a>
             </div>
         </li>
 
@@ -39,12 +40,11 @@
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Blog
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
-            </div>
-        </li>
+            </li>
+            
+        <li class="nav-item dropdown">
+                <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Contact Us
+                </a>    
     </ul>
 </div>
