Added product details functionality

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,7 +32,7 @@
                 <a href="" class="dropdown-item">Weights</a>
                 <a href="" class="dropdown-item">Cardio</a>
                 <a href="" class="dropdown-item">Training Plans</a>
-                <a href="" class="dropdown-item">All Fitness Equipment</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Fitness Equipment</a>
             </div>
         </li>
 
