--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,10 +17,10 @@
                 Fitness Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Stringers</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">Shorts</a>
-                <a href="" class="dropdown-item">All Fitness Clothing</a>
+                <a href="{% url 'products' %}?category=activewear,stringers" class="dropdown-item">Stringers</a>
+                <a href="{% url 'products' %}?category=shirts">Shirts</a>
+                <a href="{% url 'products' %}?category=shorts">Shorts</a>
+                <a href="{% url 'products' %}?category=activewear,stringers,shirts,shorts">All Fitness Clothing</a>
             </div>
         </li>
 
@@ -29,9 +29,9 @@
                 Fitness Equipment
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Weights</a>
-                <a href="" class="dropdown-item">Cardio</a>
-                <a href="" class="dropdown-item">Training Plans</a>
+                <a href="{% url 'products' %}?category=Weights">Weights</a>
+                <a href="{% url 'products' %}?category=Cardio">Cardio</a>
+                <a href="{% url 'products' %}?category=Training Plans">Training Plans</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Fitness Equipment</a>
             </div>
         </li>
