Fixed error in main-nav.html for sorting

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,9 +17,9 @@
                 Fitness Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="{% url 'products' %}?category=activewear,stringers" class="dropdown-item">Stringers</a>
-                <a href="{% url 'products' %}?category=shirts" class="dropdown-item">Shirts</a>
-                <a href="{% url 'products' %}?category=shorts" class="dropdown-item">Shorts</a>
+                <a href="{% url 'products' %}?category=Stringers" class="dropdown-item">Stringers</a>
+                <a href="{% url 'products' %}?category=Shirts" class="dropdown-item">Shirts</a>
+                <a href="{% url 'products' %}?category=Shorts" class="dropdown-item">Shorts</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Fitness Clothing</a>
             </div>
         </li>
