--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -20,7 +20,7 @@
                 <a href="{% url 'products' %}?category=Stringers" class="dropdown-item">Stringers</a>
                 <a href="{% url 'products' %}?category=Shirts" class="dropdown-item">Shirts</a>
                 <a href="{% url 'products' %}?category=Shorts" class="dropdown-item">Shorts</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Fitness Clothing</a>
+                <a href="{% url 'products' %}?category=Stringers,Shirts,Shorts" class="dropdown-item">All Fitness Clothing</a>
             </div>
         </li>
 
@@ -32,7 +32,7 @@
                 <a href="{% url 'products' %}?category=Weights" class="dropdown-item">Weights</a>
                 <a href="{% url 'products' %}?category=Cardio" class="dropdown-item">Cardio</a>
                 <a href="{% url 'products' %}?category=Training Plans" class="dropdown-item">Training Plans</a>
-                <a href="{% url 'products' %}" class="dropdown-item">All Fitness Equipment</a>
+                <a href="{% url 'products' %}?category=Weights,Cardio,Training Plans" class="dropdown-item">All Fitness Equipment</a>
             </div>
         </li>
 
