Added html for contact_us file

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -31,7 +31,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
                 <a href="{% url 'products' %}?category=Weights" class="dropdown-item">Weights</a>
                 <a href="{% url 'products' %}?category=Cardio" class="dropdown-item">Cardio</a>
-                <a href="{% url 'products' %}?category=Training Plans" class="dropdown-item">Training Plans</a>
+                <a href="{% url 'products' %}?category=Exercise Classes" class="dropdown-item">Exercise Classes</a>
                 <a href="{% url 'products' %}?category=Weights,Cardio,Training Plans" class="dropdown-item">All Fitness Equipment</a>
             </div>
         </li>
