--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -69,7 +69,7 @@
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                            <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
@@ -134,7 +134,7 @@
 	</script>
     
     <script type="text/javascript">
-        $('#sort-selector').change(function() {
+        €('#sort-selector').change(function() {
             var selector = $(this);
             var currentUrl = new URL(window.location);
 
