--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -32,7 +32,7 @@
                 <a href="{% url 'products' %}?category=Weights" class="dropdown-item">Weights</a>
                 <a href="{% url 'products' %}?category=Cardio" class="dropdown-item">Cardio</a>
                 <a href="{% url 'products' %}?category=Exercise Classes" class="dropdown-item">Exercise Classes</a>
-                <a href="{% url 'products' %}?category=Weights,Cardio,Training Plans" class="dropdown-item">All Fitness Equipment</a>
+                <a href="{% url 'products' %}?category=Weights,Cardio,Exercise Classes" class="dropdown-item">All Fitness Equipment</a>
             </div>
         </li>
         <li class="nav-item dropdown">
