--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -36,7 +36,7 @@
             </div>
         </li>
         <li class="nav-item dropdown">
-                <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'contact' %}" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="logo-font font-weight-bold nav-link text-black mr-5" href="" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Contact Us
                 </a>    
     </ul>
