Fixed bug in js in products.html

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -134,7 +134,7 @@
 	</script>
     
     <script type="text/javascript">
-        €('#sort-selector').change(function() {
+        $('#sort-selector').change(function() {
             var selector = $(this);
             var currentUrl = new URL(window.location);
 
