Footer added and css added

--- a/templates/base.html
+++ b/templates/base.html
@@ -137,6 +137,34 @@
     {% block content %}
     {% endblock %}
 
+    <!-- footer of website -->
+    {% block footer %}
+    <footer class="page-footer d-none d-md-block fixed-bottom mt-5 bg-color">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center py-2">
+                    <!-- social links -->
+                    <ul class="list-inline list-unstyled social-icons">
+                        <li class="list-inline-item social-style"><a href="https://www.facebook.com" target="_blank"><i
+                                    class="fab fa-facebook-f text-bright" id="facebook" title="Facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item social-style"><a href="https://www.instagram.com" target="_blank"><i
+                                    class="fab fa-instagram text-bright" id="instagram" title="Instagram"></i></a>
+                        </li>
+                        <li class="list-inline-item social-style"><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter text-bright"
+                                    id="twitter" title="Twitter"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row footer-copyright">
+            <div class="col-12 center-align copyright-text">
+                <p class="text-center">Copyright &copy; 2021 by Oisín McHugh</p>
+            </div>
+        </div>
+    </footer>
+    {% endblock %}
+
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
