--- a/static/css/base.css
+++ b/static/css/base.css
@@ -174,6 +174,52 @@ input[name='q']::placeholder {
     overflow-y: auto;
 }
 
+/* footer */
+.page-footer{
+    color:#ffffff;
+}
+
+.bg-color {
+    background-color: #000000;
+}
+
+.social-style{
+    margin: 0 0.9rem;
+    font-size: 1.2rem;
+    -webkit-transition: all .8s ease-in-out;
+    -o-transition: all .8s ease-in-out;
+    transition: all .8s ease-in-out;
+}
+.copyright-text{
+    font-size: 0.8rem;
+}
+.copyright-text > p{
+    margin-bottom: 0.3rem;
+}
+.footer-title{
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+}
+/* below colors found: https://usbrandcolors.com/ */
+#facebook:hover{
+    color: #ffffff;
+    -webkit-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+            transform: scale(1.5);
+}
+#twitter:hover{
+    color: #ffffff;
+    -webkit-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+            transform: scale(1.5);
+}
+#instagram:hover{
+    color: #ffffff;
+    -webkit-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+            transform: scale(1.5);
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
