--- a/templates/base.html
+++ b/templates/base.html
@@ -139,30 +139,45 @@
 
     <!-- footer of website -->
     {% block footer %}
-    <footer class="page-footer d-none d-md-block fixed-bottom mt-5 bg-color">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 text-center py-2">
-                    <!-- social links -->
-                    <ul class="list-inline list-unstyled social-icons">
-                        <li class="list-inline-item social-style"><a href="https://www.facebook.com" target="_blank"><i
-                                    class="fab fa-facebook-f text-bright" id="facebook" title="Facebook"></i></a>
-                        </li>
-                        <li class="list-inline-item social-style"><a href="https://www.instagram.com" target="_blank"><i
-                                    class="fab fa-instagram text-bright" id="instagram" title="Instagram"></i></a>
-                        </li>
-                        <li class="list-inline-item social-style"><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter text-bright"
-                                    id="twitter" title="Twitter"></i></a></li>
-                    </ul>
-                </div>
+     <!--Footer-->
+     <footer class="footer footer-div mt-auto container-fluid">
+        <div id="footer-details" class="row">
+            <!--Copyright-->
+            <div class="col-sm-6">
+                <h5 class="uppercase general-sub"><i class="fa fa-copyright list-inline-item" aria-hidden="true"></i> 2021</h5>
             </div>
-        </div>
-        <div class="row footer-copyright">
-            <div class="col-12 center-align copyright-text">
-                <p class="text-center">Copyright &copy; 2021 by Oisín McHugh</p>
+            <!--Social Links-->
+            <div class="col-sm-6">
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" rel="noopener" href="https://www.facebook.com">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" rel="noopener" href="https://www.twitter.com">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                            <span class="sr-only">Twitter</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" rel="noopener" href="https://www.instagram.com">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                            <span class="sr-only">Instagram</span>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" rel="noopener" href="https://www.youtube.com">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
+    <!--footer-->
     {% endblock %}
 
     {% block postloadjs %}
