--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -17,7 +17,7 @@
                 Fitness Clothing
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="{% url 'products' %}?category=Stringers" class="dropdown-item" style="color: black;">Stringers</a>
+                <a href="{% url 'products' %}?category=Stringers"class="dropdown-item">Stringers</a>
                 <a href="{% url 'products' %}?category=Shirts" class="dropdown-item">Shirts</a>
                 <a href="{% url 'products' %}?category=Shorts" class="dropdown-item">Shorts</a>
                 <a href="{% url 'products' %}?category=Stringers,Shirts,Shorts" class="dropdown-item">All Fitness Clothing</a>
