Fixed broken links to contact and blog

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -20,14 +20,14 @@
     <div class="row align-items-center my-4">
         <div class="col-12 col-md-6">
             <div class="my-4">
-                <img src="{{ MEDIA_URL }}about.jpg" alt="about-photo" class="img-fluid">
+                
             </div>
         </div>
         <!--- About text container --->
         <div class="col-12 col-md-12 col-lg-6">
             <div class="about-details-container mb-5 mt-md-5">
-                <h2 class="about-heading">Our Story</h2>
-                <p class="about-text">Thank you for choosing Fit4Life for your Fitness equipment and clothing, we truly
+                <h2 class="about-heading" style="color: white;">Our Story</h2>
+                <p class="about-text" style="color: white;">Thank you for choosing Fit4Life for your Fitness equipment and clothing, we truly
                     appreciate your custom and we hope you enjoy your shopping experience with us here on site.
 
                     Fit4Life was founded in 2021 with a handful of products and an internet connection. From humble
