--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -25,7 +25,7 @@
 
         <!-- contact us form container -->
         <div class="row">
-            <div class="col-8 offset-2">
+            <div class="col-8 offset-2" style="margin-top: 100px;">
                 <!-- Contact us form -->
                 <form method="POST" action="{% url 'contact' %}" class="form mb-3">
                     {% csrf_token %}
