--- a/static/css/base.css
+++ b/static/css/base.css
@@ -181,7 +181,7 @@ input[name='q']::placeholder {
     min-height: 80px;
     width: 100%;
     bottom: 0px;
-    margin-top: auto;
+    margin-top: 170px !important;
   }
   .footer-div {
     padding-top: 10px;
