Code added for superuser to add blog post

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -16,7 +16,8 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container container-pad mt-2 mb-5">
+    <div class="container container-pad mt-2 mb-5" style="
+    padding-top: 200px;">
         <div class="row">
             <!-- blog page with list of all posts -->
             <div class="col-12 mb-3">
