--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -110,6 +110,43 @@
             </div>
         </div>
     </div>
+
+                    <!-- allow authenticated users to add a review -->
+                    <div id="add-review-form" class="mb-5">
+                        {% if user.is_authenticated %}
+                            <form action="{% url 'add_review' product.id %}" method="POST">
+                                {% csrf_token %}
+                                <label for="rating">Rating:</label>
+                                <select name="rating" id="rating" class="form-control">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                </select>
+    
+                                <label for="title">Review Heading:</label>
+                                <input type="text" id="title" name="title" class="form-control" placeholder="Enter a heading for your review">
+    
+                                <label for="comment">Comment</label>
+                                <textarea name="comment" id="comment" cols="30" rows="5" class="form-control"></textarea>
+    
+                                <input type="submit" class="btn rounded-2 py-2 text-capitalize mt-4 btn-bg-col btn-text" value="Add Review">
+                            </form>
+                        {% else %}
+                            <p class="text-start mb-3">Please <a href="{% url 'account_login' %}" class="text-decoration-none text-bright">Login</a> or <a href="{% url 'account_signup' %}" class="text-decoration-none text-bright">Register</a> an account to leave a Review</p>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endblock %}
+    
+    {% block postloadjs %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input.html' %}
+    {% include 'products/includes/show_hide_reviews.html' %}
+    {% endblock %}
 {% endblock %}
 
 {% block postloadjs %}
