Images uploaded for testing file

--- a/blog/templates/blog/add_blog_post.html
+++ b/blog/templates/blog/add_blog_post.html
@@ -25,7 +25,7 @@
 
         <!-- Add blog container -->
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6" style="padding-top: 120px;">
                 <!-- Add blog post form -->
                 <form method="POST" action="{% url 'add_blog_post' %}" class="form mb-3" enctype="multipart/form-data">
                     {% csrf_token %}
