--- a/blog/templates/blog/blog_post.html
+++ b/blog/templates/blog/blog_post.html
@@ -19,7 +19,7 @@
     <div class="overlay"></div>
     <!-- blog post contaoiner -->
     <div class="container container-pad mt-2 mb-5">
-        <div class="row">
+        <div class="row" style="padding-top: 200px;">
             <div class="col-12 col-lg-8 offset-lg-2 mt-2 mb-5">
                 <!-- blog post details -->
                 <h2 class="post-title">{{ post.title }}</h2>
