--- a/blog/templates/blog/edit_blog_post.html
+++ b/blog/templates/blog/edit_blog_post.html
@@ -3,7 +3,7 @@
 
 {% block page_header %}
     <div class="container hdr-container">
-        <div class="row">
+        <div class="row" style="padding-top: 120px;">
             <div class="col">
             </div>
         </div>
