Files added to make reviews work, hopefully

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -24,7 +24,7 @@
         </div>
 
         <!-- contact us form container -->
-        <div class="row">
+        <div class="row" style="padding-top: 50px;">
             <div class="col-8 offset-2" style="margin-top: 100px;">
                 <!-- Contact us form -->
                 <form method="POST" action="{% url 'contact' %}" class="form mb-3">
