--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -24,7 +24,7 @@
         </div>
 
         <!-- contact us form container -->
-        <div class="row">
+        <div class="row" style="padding-top: 50px;">
             <div class="col-8 offset-2">
                 <!-- Contact us form -->
                 <form method="POST" action="{% url 'contact' %}" class="form mb-3">
