--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -125,7 +125,7 @@
                     <!-- Got help with pagination in django here: https://www.youtube.com/watch?v=wmYSKVWOOTM -->
                     {% if reviews %}
                     <!--  Got help with below here https://docs.djangoproject.com/en/dev/ref/templates/builtins/?from=olddocs#dictsort -->
-                        {% for review in page.object_list|dictsortreversed:"created" %}
+                        {% for review in reviews %}
                             <div class="card mb-3">
                                 <div class="card-header">
                                     <h5><strong>{{ review.title }}</strong></h5>
@@ -138,10 +138,10 @@
                                             <div class="modal-content">
                                               <div class="modal-header">
                                                 <h4 class="modal-title text-capitalize">Are you sure you want to delete this review?</h4>
-                                                <span class="float-end"><a href="{% url 'product_details' product.id %}" class="close-btn text-decoration-none text-bright"><i class="far fa-window-close icon"></i></a></span>
+                                                <span class="float-end"><a href="{% url 'product_detail' product.id %}" class="close-btn text-decoration-none text-bright"><i class="far fa-window-close icon"></i></a></span>
                                               </div>
                                               <div class="modal-footer">
-                                                <a href="{% url 'product_details' product.id %}" class="btn rounded-2 mt-4 btn-outline-dark"> Cancel</a>
+                                                <a href="{% url 'product_detail' product.id %}" class="btn rounded-2 mt-4 btn-outline-dark"> Cancel</a>
                                                 <a href="{% url 'delete_review' product.id review.id %}" class="btn rounded-2 text-capitalize mt-4 btn-bg-col" aria-hidden="true">Confirm</a>
                                               </div>
                                             </div>
